# paragraphx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark.py  run_bfs.py  run_sssp.py
src/paragraphx/: __init__.py  graph.py
src/paragraphx/algorithms/: __init__.py  bfs.py  sssp.py
tests/: test_bfs.py
